// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inline Overlay Input Set Error Exp should open yaml view and render out of sync error strip  1`] = `
<div
  class="bp3-dialog"
  style="min-width: 700px;"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    >
      inputSets.editOverlayTitle
    </h4>
    <button
      aria-label="Close"
      class="bp3-button bp3-minimal bp3-dialog-close-button"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-small-cross"
        icon="small-cross"
      >
        <svg
          data-icon="small-cross"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <desc>
            small-cross
          </desc>
          <path
            d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="bp3-dialog-body"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
    >
      <div
        class="optionBtns"
      >
        <div
          class="PillToggle--optionBtns"
        >
          <div
            class="PillToggle--item PillToggle--disabledMode"
            data-name="toggle-option-one"
            role="button"
            tabindex="0"
          >
            VISUAL
            <span
              class="bp3-popover-wrapper bp3-dark"
            >
              <span
                class="bp3-popover-target"
              >
                <span
                  class="bp3-icon StyledProps--main PillToggle--disableToggleReasonIcon StyledProps--intent-danger"
                  data-icon="danger-icon"
                  data-testid="invalid-icon"
                  tabindex="0"
                >
                  <svg
                    fill="none"
                    height="12"
                    viewBox="0 0 32 32"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M16.878 4.506a1 1 0 00-1.737 0L3.153 25.505A1 1 0 004.022 27h23.974a1 1 0 00.869-1.495L16.878 4.506zm.603 17.973c0-.823-.684-1.49-1.527-1.49-.843 0-1.527.667-1.527 1.49 0 .822.684 1.49 1.527 1.49.843 0 1.527-.668 1.527-1.49zm-1.527-3.486a1 1 0 001-1v-6.997a1 1 0 00-2 0v6.997a1 1 0 001 1z"
                      fill="#DA291D"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M4.022 26L16.009 5.002 27.996 26H4.022zm11.832-6.01a2 2 0 01-1.9-1.997v-6.997a2 2 0 114 0v6.997a2 2 0 01-1.9 1.998c1.328.052 2.427 1.124 2.427 2.488 0 1.398-1.155 2.49-2.527 2.49s-2.527-1.092-2.527-2.49c0-1.364 1.099-2.436 2.427-2.488zM15.14 4.507a1 1 0 011.737 0l11.987 20.999A1 1 0 0127.996 27H4.022a1 1 0 01-.869-1.495L15.141 4.506zm.813 16.483c.843 0 1.527.667 1.527 1.49 0 .822-.684 1.49-1.527 1.49-.843 0-1.527-.668-1.527-1.49 0-.823.684-1.49 1.527-1.49zm1-2.996a1 1 0 01-2 0v-6.997a1 1 0 112 0v6.997z"
                      fill="#DA291D"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </span>
          </div>
          <div
            class="PillToggle--item PillToggle--selected PillToggle--disabledMode"
            data-name="toggle-option-two"
            role="button"
            tabindex="0"
          >
            YAML
          </div>
        </div>
      </div>
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <div
          class="editor"
        >
          <div
            class="StyledProps--font StyledProps--main mainContainer"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-flex-start StyledProps--flex-alignItems-center"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-small-bold StyledProps--color StyledProps--color-red600 StyledProps--margin-right-medium StyledProps--intent-danger"
                style="display: flex; align-items: center;"
              >
                <span
                  class="bp3-icon bp3-icon-warning-sign StyledProps--main Text--icon StyledProps--padding-right-xsmall"
                  icon="warning-sign"
                >
                  <svg
                    data-icon="warning-sign"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      warning-sign
                    </desc>
                    <path
                      d="M15.84 13.5l.01-.01-7-12-.01.01c-.17-.3-.48-.5-.85-.5s-.67.2-.85.5l-.01-.01-7 12 .01.01c-.09.15-.15.31-.15.5 0 .55.45 1 1 1h14c.55 0 1-.45 1-1 0-.19-.06-.35-.15-.5zm-6.85-.51h-2v-2h2v2zm0-3h-2v-5h2v5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                pipeline.inputSetErrorStrip.errorInfo
              </p>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-secondary Button--size Button--small"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  pipeline.outOfSyncErrorStrip.reconcile
                </span>
              </button>
            </div>
          </div>
          <div>
            <span>
              Yaml View
            </span>
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--padding-top-medium"
          >
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                save
              </span>
            </button>
               
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                cancel
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Old Git Sync Input Set Error Exp should open delete input set modal on clicking reconcile button, if input set is empty: Delete Overlay Input Set Modal - OLd Git Sync 1`] = `
<div
  class="bp3-portal"
>
  <div
    class="bp3-overlay bp3-overlay-open bp3-overlay-scroll-container"
  >
    <div
      class="bp3-overlay-backdrop bp3-overlay-appear-done bp3-overlay-enter-done"
    />
    <div
      class="bp3-dialog-container bp3-overlay-content bp3-overlay-appear-done bp3-overlay-enter-done"
      tabindex="0"
    >
      <div
        class="bp3-dialog ConfirmationDialog--dialog"
        style="width: 500px; min-height: 218px;"
      >
        <div
          class="StyledProps--font StyledProps--main ConfirmationDialog--iconContainer StyledProps--flex"
        >
          <span
            class="bp3-icon StyledProps--main ConfirmationDialog--icon"
            data-icon="main-close"
          >
            <svg
              height="8"
              viewBox="0 0 14 14"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.6 7l5-5c.3-.2.4-.5.4-.8 0-.7-.5-1.2-1.2-1.2-.3 0-.6.1-.8.3l-5 5-5-5C1.8.1 1.5 0 1.2 0 .5 0 0 .5 0 1.2c0 .3.1.6.3.8l5 5-5 5c-.2.2-.3.5-.3.8 0 .7.5 1.2 1.2 1.2.3 0 .6-.1.8-.3l5-5 5 5c.2.2.5.4.8.4.6 0 1.2-.5 1.2-1.2 0-.3-.1-.6-.3-.8z"
                fill="#4d5969"
              />
            </svg>
          </span>
        </div>
        <div
          class="Layout--horizontal StyledProps--main ConfirmationDialog--header StyledProps--padding-left-xsmall"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--margin-right-small StyledProps--intent-danger"
            data-icon="danger-icon"
          >
            <svg
              fill="none"
              height="32"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M16.878 4.506a1 1 0 00-1.737 0L3.153 25.505A1 1 0 004.022 27h23.974a1 1 0 00.869-1.495L16.878 4.506zm.603 17.973c0-.823-.684-1.49-1.527-1.49-.843 0-1.527.667-1.527 1.49 0 .822.684 1.49 1.527 1.49.843 0 1.527-.668 1.527-1.49zm-1.527-3.486a1 1 0 001-1v-6.997a1 1 0 00-2 0v6.997a1 1 0 001 1z"
                fill="#DA291D"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M4.022 26L16.009 5.002 27.996 26H4.022zm11.832-6.01a2 2 0 01-1.9-1.997v-6.997a2 2 0 114 0v6.997a2 2 0 01-1.9 1.998c1.328.052 2.427 1.124 2.427 2.488 0 1.398-1.155 2.49-2.527 2.49s-2.527-1.092-2.527-2.49c0-1.364 1.099-2.436 2.427-2.488zM15.14 4.507a1 1 0 011.737 0l11.987 20.999A1 1 0 0127.996 27H4.022a1 1 0 01-.869-1.495L15.141 4.506zm.813 16.483c.843 0 1.527.667 1.527 1.49 0 .822-.684 1.49-1.527 1.49-.843 0-1.527-.668-1.527-1.49 0-.823.684-1.49 1.527-1.49zm1-2.996a1 1 0 01-2 0v-6.997a1 1 0 112 0v6.997z"
                fill="#DA291D"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-h4"
          >
            pipeline.inputSets.invalidOverlayIS
          </p>
        </div>
        <div
          class="Layout--vertical StyledProps--main ConfirmationDialog--body StyledProps--font StyledProps--font-variation-body StyledProps--color StyledProps--color-black StyledProps--margin-top-large StyledProps--margin-bottom-xxlarge"
        >
          pipeline.inputSets.invalidOverlayISDesc1
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        >
          <div
            class="StyledProps--font StyledProps--main"
            style="display: flex; justify-content: flexStart;"
          >
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-danger Button--with-current-color"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                pipeline.inputSets.deleteOverlayIS
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Old Git Sync Input Set Error Exp should open reconcile dialog on clicking reconcile button, when loading state is false & input set is not empty: Reconcile Dialog - Old Git Sync 1`] = `
<div
  class="bp3-portal"
>
  <div
    class="bp3-overlay bp3-overlay-open bp3-overlay-scroll-container"
  >
    <div
      class="bp3-overlay-backdrop bp3-overlay-appear-done bp3-overlay-enter-done"
      tabindex="0"
    />
    <div
      class="bp3-dialog-container bp3-overlay-content bp3-overlay-appear-done bp3-overlay-enter-done"
      tabindex="0"
    >
      <div
        class="bp3-dialog Dialog--dialog reconcileDialog"
      >
        <span
          class="bp3-icon StyledProps--main Dialog--close"
          data-icon="Stroke"
        >
          <svg
            fill="none"
            height="15"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1 .8l6 6 6-6-12 12 6-6 6 6"
              stroke="#8F90A6"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </span>
        <div
          class="StyledProps--font StyledProps--main Dialog--children StyledProps--padding-none"
        >
          <div
            class="StyledProps--font StyledProps--main"
          >
            <div
              class="Layout--vertical StyledProps--main"
            >
              <div
                class="StyledProps--font StyledProps--main StyledProps--border StyledProps--border-bottom StyledProps--padding-top-large StyledProps--padding-right-xxxlarge StyledProps--padding-bottom-large StyledProps--padding-left-xxxlarge"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-variation-h4"
                >
                  pipeline.inputSetErrorStrip.reconcileDialogTitle
                </p>
              </div>
              <div
                class="StyledProps--font StyledProps--main StyledProps--background-form StyledProps--padding-top-large StyledProps--padding-right-xxxlarge StyledProps--padding-bottom-xxxlarge StyledProps--padding-left-xxxlarge"
                style="flex: 1; width: 100%;"
              >
                <div
                  class="StyledProps--font StyledProps--main mainContainer"
                >
                  <div
                    class="Layout--vertical StyledProps--main"
                    style="height: 100%;"
                  >
                    <div
                      class="StyledProps--font StyledProps--main"
                      style="height: 56px;"
                    >
                      <div
                        class="Layout--horizontal StyledProps--main"
                        style="height: 100%;"
                      >
                        <div
                          class="StyledProps--font StyledProps--main StyledProps--border StyledProps--border-right"
                          style="width: 604px;"
                        >
                          <div
                            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-center StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge"
                            style="height: 100%;"
                          >
                            <p
                              class="StyledProps--font StyledProps--main StyledProps--font-variation-h6"
                            >
                              pipeline.inputSetErrorStrip.existingYaml
                            </p>
                          </div>
                        </div>
                        <div
                          class="StyledProps--font StyledProps--main refreshedHeader"
                        >
                          <div
                            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-center StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge"
                            style="height: 100%;"
                          >
                            <p
                              class="StyledProps--font StyledProps--main StyledProps--font-variation-h6"
                            >
                              pipeline.inputSetErrorStrip.validYaml
                            </p>
                            <span
                              class="bp3-popover-wrapper"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <div
                                  class=""
                                  tabindex="0"
                                >
                                  <span
                                    class="bp3-icon StyledProps--main copyIcon"
                                    data-icon="copy-alt"
                                  >
                                    <svg
                                      fill="none"
                                      height="20"
                                      viewBox="0 0 8 9"
                                      width="20"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        clip-rule="evenodd"
                                        d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                                        fill="currentColor"
                                        fill-rule="evenodd"
                                      />
                                    </svg>
                                  </span>
                                </div>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <textarea>
                      overlayInputSet:
  name: overlayInpG1
  identifier: overlayInpG1
  orgIdentifier: default
  projectIdentifier: Kapil
  pipelineIdentifier: Eric_Git_Sync
  inputSetReferences:
    - inpG2
  tags: {}

                    </textarea>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main StyledProps--border StyledProps--border-bottom StyledProps--padding-top-large StyledProps--padding-right-xxxlarge StyledProps--padding-bottom-large StyledProps--padding-left-xxxlarge"
              >
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-danger Button--with-current-color"
                  style="width: 232px;"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    pipeline.inputSets.removeInvalidFields
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <footer />
      </div>
    </div>
  </div>
</div>
`;

exports[`Old Git Sync Input Set Error Exp should open yaml view and render out of sync error strip  1`] = `
<div
  class="bp3-dialog"
  style="min-width: 700px;"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    >
      inputSets.editOverlayTitle
    </h4>
    <button
      aria-label="Close"
      class="bp3-button bp3-minimal bp3-dialog-close-button"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-small-cross"
        icon="small-cross"
      >
        <svg
          data-icon="small-cross"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <desc>
            small-cross
          </desc>
          <path
            d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="bp3-dialog-body"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
    >
      <div
        class="optionBtns"
      >
        <div
          class="PillToggle--optionBtns"
        >
          <div
            class="PillToggle--item PillToggle--disabledMode"
            data-name="toggle-option-one"
            role="button"
            tabindex="0"
          >
            VISUAL
            <span
              class="bp3-popover-wrapper bp3-dark"
            >
              <span
                class="bp3-popover-target"
              >
                <span
                  class="bp3-icon StyledProps--main PillToggle--disableToggleReasonIcon StyledProps--intent-danger"
                  data-icon="danger-icon"
                  data-testid="invalid-icon"
                  tabindex="0"
                >
                  <svg
                    fill="none"
                    height="12"
                    viewBox="0 0 32 32"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M16.878 4.506a1 1 0 00-1.737 0L3.153 25.505A1 1 0 004.022 27h23.974a1 1 0 00.869-1.495L16.878 4.506zm.603 17.973c0-.823-.684-1.49-1.527-1.49-.843 0-1.527.667-1.527 1.49 0 .822.684 1.49 1.527 1.49.843 0 1.527-.668 1.527-1.49zm-1.527-3.486a1 1 0 001-1v-6.997a1 1 0 00-2 0v6.997a1 1 0 001 1z"
                      fill="#DA291D"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M4.022 26L16.009 5.002 27.996 26H4.022zm11.832-6.01a2 2 0 01-1.9-1.997v-6.997a2 2 0 114 0v6.997a2 2 0 01-1.9 1.998c1.328.052 2.427 1.124 2.427 2.488 0 1.398-1.155 2.49-2.527 2.49s-2.527-1.092-2.527-2.49c0-1.364 1.099-2.436 2.427-2.488zM15.14 4.507a1 1 0 011.737 0l11.987 20.999A1 1 0 0127.996 27H4.022a1 1 0 01-.869-1.495L15.141 4.506zm.813 16.483c.843 0 1.527.667 1.527 1.49 0 .822-.684 1.49-1.527 1.49-.843 0-1.527-.668-1.527-1.49 0-.823.684-1.49 1.527-1.49zm1-2.996a1 1 0 01-2 0v-6.997a1 1 0 112 0v6.997z"
                      fill="#DA291D"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </span>
          </div>
          <div
            class="PillToggle--item PillToggle--selected PillToggle--disabledMode"
            data-name="toggle-option-two"
            role="button"
            tabindex="0"
          >
            YAML
          </div>
        </div>
      </div>
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <div
          class="editor"
        >
          <div
            class="StyledProps--font StyledProps--main mainContainer"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-flex-start StyledProps--flex-alignItems-center"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-small-bold StyledProps--color StyledProps--color-red600 StyledProps--margin-right-medium StyledProps--intent-danger"
                style="display: flex; align-items: center;"
              >
                <span
                  class="bp3-icon bp3-icon-warning-sign StyledProps--main Text--icon StyledProps--padding-right-xsmall"
                  icon="warning-sign"
                >
                  <svg
                    data-icon="warning-sign"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      warning-sign
                    </desc>
                    <path
                      d="M15.84 13.5l.01-.01-7-12-.01.01c-.17-.3-.48-.5-.85-.5s-.67.2-.85.5l-.01-.01-7 12 .01.01c-.09.15-.15.31-.15.5 0 .55.45 1 1 1h14c.55 0 1-.45 1-1 0-.19-.06-.35-.15-.5zm-6.85-.51h-2v-2h2v2zm0-3h-2v-5h2v5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                pipeline.inputSetErrorStrip.errorInfo
              </p>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-secondary Button--size Button--small"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  pipeline.outOfSyncErrorStrip.reconcile
                </span>
              </button>
            </div>
          </div>
          <div>
            <span>
              Yaml View
            </span>
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--padding-top-medium"
          >
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                save
              </span>
            </button>
               
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                cancel
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Remote Git Sync Input Set Error Exp should open delete input set modal on clicking reconcile button, if input set is empty: Delete Input Set Modal - Remote Git Sync 1`] = `
<div
  class="bp3-portal"
>
  <div
    class="bp3-overlay bp3-overlay-open bp3-overlay-scroll-container"
  >
    <div
      class="bp3-overlay-backdrop bp3-overlay-appear-done bp3-overlay-enter-done"
    />
    <div
      class="bp3-dialog-container bp3-overlay-content bp3-overlay-appear-done bp3-overlay-enter-done"
      tabindex="0"
    >
      <div
        class="bp3-dialog ConfirmationDialog--dialog"
        style="width: 500px; min-height: 218px;"
      >
        <div
          class="StyledProps--font StyledProps--main ConfirmationDialog--iconContainer StyledProps--flex"
        >
          <span
            class="bp3-icon StyledProps--main ConfirmationDialog--icon"
            data-icon="main-close"
          >
            <svg
              height="8"
              viewBox="0 0 14 14"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.6 7l5-5c.3-.2.4-.5.4-.8 0-.7-.5-1.2-1.2-1.2-.3 0-.6.1-.8.3l-5 5-5-5C1.8.1 1.5 0 1.2 0 .5 0 0 .5 0 1.2c0 .3.1.6.3.8l5 5-5 5c-.2.2-.3.5-.3.8 0 .7.5 1.2 1.2 1.2.3 0 .6-.1.8-.3l5-5 5 5c.2.2.5.4.8.4.6 0 1.2-.5 1.2-1.2 0-.3-.1-.6-.3-.8z"
                fill="#4d5969"
              />
            </svg>
          </span>
        </div>
        <div
          class="Layout--horizontal StyledProps--main ConfirmationDialog--header StyledProps--padding-left-xsmall"
        >
          <span
            class="bp3-icon StyledProps--main StyledProps--margin-right-small StyledProps--intent-danger"
            data-icon="danger-icon"
          >
            <svg
              fill="none"
              height="32"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M16.878 4.506a1 1 0 00-1.737 0L3.153 25.505A1 1 0 004.022 27h23.974a1 1 0 00.869-1.495L16.878 4.506zm.603 17.973c0-.823-.684-1.49-1.527-1.49-.843 0-1.527.667-1.527 1.49 0 .822.684 1.49 1.527 1.49.843 0 1.527-.668 1.527-1.49zm-1.527-3.486a1 1 0 001-1v-6.997a1 1 0 00-2 0v6.997a1 1 0 001 1z"
                fill="#DA291D"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M4.022 26L16.009 5.002 27.996 26H4.022zm11.832-6.01a2 2 0 01-1.9-1.997v-6.997a2 2 0 114 0v6.997a2 2 0 01-1.9 1.998c1.328.052 2.427 1.124 2.427 2.488 0 1.398-1.155 2.49-2.527 2.49s-2.527-1.092-2.527-2.49c0-1.364 1.099-2.436 2.427-2.488zM15.14 4.507a1 1 0 011.737 0l11.987 20.999A1 1 0 0127.996 27H4.022a1 1 0 01-.869-1.495L15.141 4.506zm.813 16.483c.843 0 1.527.667 1.527 1.49 0 .822-.684 1.49-1.527 1.49-.843 0-1.527-.668-1.527-1.49 0-.823.684-1.49 1.527-1.49zm1-2.996a1 1 0 01-2 0v-6.997a1 1 0 112 0v6.997z"
                fill="#DA291D"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-h4"
          >
            pipeline.inputSets.invalidOverlayIS
          </p>
        </div>
        <div
          class="Layout--vertical StyledProps--main ConfirmationDialog--body StyledProps--font StyledProps--font-variation-body StyledProps--color StyledProps--color-black StyledProps--margin-top-large StyledProps--margin-bottom-xxlarge"
        >
          pipeline.inputSets.invalidOverlayISDesc1
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        >
          <div
            class="StyledProps--font StyledProps--main"
            style="display: flex; justify-content: flexStart;"
          >
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-danger Button--with-current-color"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                pipeline.inputSets.deleteOverlayIS
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Remote Git Sync Input Set Error Exp should open reconcile dialog on clicking reconcile button, when loading state is false & input set is not empty: Reconcile Dialog - Remote Git Sync 1`] = `
<div
  class="bp3-portal"
>
  <div
    class="bp3-overlay bp3-overlay-open bp3-overlay-scroll-container"
  >
    <div
      class="bp3-overlay-backdrop bp3-overlay-appear-done bp3-overlay-enter-done"
      tabindex="0"
    />
    <div
      class="bp3-dialog-container bp3-overlay-content bp3-overlay-appear-done bp3-overlay-enter-done"
      tabindex="0"
    >
      <div
        class="bp3-dialog Dialog--dialog reconcileDialog"
      >
        <span
          class="bp3-icon StyledProps--main Dialog--close"
          data-icon="Stroke"
        >
          <svg
            fill="none"
            height="15"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1 .8l6 6 6-6-12 12 6-6 6 6"
              stroke="#8F90A6"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </span>
        <div
          class="StyledProps--font StyledProps--main Dialog--children StyledProps--padding-none"
        >
          <div
            class="StyledProps--font StyledProps--main"
          >
            <div
              class="Layout--vertical StyledProps--main"
            >
              <div
                class="StyledProps--font StyledProps--main StyledProps--border StyledProps--border-bottom StyledProps--padding-top-large StyledProps--padding-right-xxxlarge StyledProps--padding-bottom-large StyledProps--padding-left-xxxlarge"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-variation-h4"
                >
                  pipeline.inputSetErrorStrip.reconcileDialogTitle
                </p>
              </div>
              <div
                class="StyledProps--font StyledProps--main StyledProps--background-form StyledProps--padding-top-large StyledProps--padding-right-xxxlarge StyledProps--padding-bottom-xxxlarge StyledProps--padding-left-xxxlarge"
                style="flex: 1; width: 100%;"
              >
                <div
                  class="StyledProps--font StyledProps--main mainContainer"
                >
                  <div
                    class="Layout--vertical StyledProps--main"
                    style="height: 100%;"
                  >
                    <div
                      class="StyledProps--font StyledProps--main"
                      style="height: 56px;"
                    >
                      <div
                        class="Layout--horizontal StyledProps--main"
                        style="height: 100%;"
                      >
                        <div
                          class="StyledProps--font StyledProps--main StyledProps--border StyledProps--border-right"
                          style="width: 604px;"
                        >
                          <div
                            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-center StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge"
                            style="height: 100%;"
                          >
                            <p
                              class="StyledProps--font StyledProps--main StyledProps--font-variation-h6"
                            >
                              pipeline.inputSetErrorStrip.existingYaml
                            </p>
                          </div>
                        </div>
                        <div
                          class="StyledProps--font StyledProps--main refreshedHeader"
                        >
                          <div
                            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-center StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge"
                            style="height: 100%;"
                          >
                            <p
                              class="StyledProps--font StyledProps--main StyledProps--font-variation-h6"
                            >
                              pipeline.inputSetErrorStrip.validYaml
                            </p>
                            <span
                              class="bp3-popover-wrapper"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <div
                                  class=""
                                  tabindex="0"
                                >
                                  <span
                                    class="bp3-icon StyledProps--main copyIcon"
                                    data-icon="copy-alt"
                                  >
                                    <svg
                                      fill="none"
                                      height="20"
                                      viewBox="0 0 8 9"
                                      width="20"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        clip-rule="evenodd"
                                        d="M7.273 1.403c0-.109-.073-.181-.182-.181H3.453c-.108 0-.181.072-.181.18v.181a.363.363 0 01-.727 0v-.361c0-.397.328-.722.728-.722h4c.4 0 .727.325.728.721v5.42a.726.726 0 01-.728.722h-1.09a.364.364 0 01-.365-.36c0-.2.165-.362.364-.362h.91c.108 0 .18-.072.18-.18V1.403zM0 7.847V2.958c0-.359.337-.652.748-.652h4.114c.411 0 .749.293.749.652v4.89c0 .359-.338.652-.749.652H.748C.337 8.5 0 8.207 0 7.847z"
                                        fill="currentColor"
                                        fill-rule="evenodd"
                                      />
                                    </svg>
                                  </span>
                                </div>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <textarea>
                      overlayInputSet:
  name: testRemOverlayInp1
  identifier: testRemOverlayInp1
  orgIdentifier: default
  projectIdentifier: Eric
  pipelineIdentifier: testRemPip
  inputSetReferences:
    - testRemInp2
  tags: {}

                    </textarea>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main StyledProps--border StyledProps--border-bottom StyledProps--padding-top-large StyledProps--padding-right-xxxlarge StyledProps--padding-bottom-large StyledProps--padding-left-xxxlarge"
              >
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-danger Button--with-current-color"
                  style="width: 232px;"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    pipeline.inputSets.removeInvalidFields
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <footer />
      </div>
    </div>
  </div>
</div>
`;

exports[`Remote Git Sync Input Set Error Exp should open yaml view and render out of sync error strip  1`] = `
<div
  class="bp3-dialog"
  style="min-width: 700px;"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    >
      inputSets.editOverlayTitle
    </h4>
    <button
      aria-label="Close"
      class="bp3-button bp3-minimal bp3-dialog-close-button"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-small-cross"
        icon="small-cross"
      >
        <svg
          data-icon="small-cross"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <desc>
            small-cross
          </desc>
          <path
            d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="bp3-dialog-body"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
    >
      <div
        class="optionBtns"
      >
        <div
          class="PillToggle--optionBtns"
        >
          <div
            class="PillToggle--item PillToggle--disabledMode"
            data-name="toggle-option-one"
            role="button"
            tabindex="0"
          >
            VISUAL
            <span
              class="bp3-popover-wrapper bp3-dark"
            >
              <span
                class="bp3-popover-target"
              >
                <span
                  class="bp3-icon StyledProps--main PillToggle--disableToggleReasonIcon StyledProps--intent-danger"
                  data-icon="danger-icon"
                  data-testid="invalid-icon"
                  tabindex="0"
                >
                  <svg
                    fill="none"
                    height="12"
                    viewBox="0 0 32 32"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M16.878 4.506a1 1 0 00-1.737 0L3.153 25.505A1 1 0 004.022 27h23.974a1 1 0 00.869-1.495L16.878 4.506zm.603 17.973c0-.823-.684-1.49-1.527-1.49-.843 0-1.527.667-1.527 1.49 0 .822.684 1.49 1.527 1.49.843 0 1.527-.668 1.527-1.49zm-1.527-3.486a1 1 0 001-1v-6.997a1 1 0 00-2 0v6.997a1 1 0 001 1z"
                      fill="#DA291D"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M4.022 26L16.009 5.002 27.996 26H4.022zm11.832-6.01a2 2 0 01-1.9-1.997v-6.997a2 2 0 114 0v6.997a2 2 0 01-1.9 1.998c1.328.052 2.427 1.124 2.427 2.488 0 1.398-1.155 2.49-2.527 2.49s-2.527-1.092-2.527-2.49c0-1.364 1.099-2.436 2.427-2.488zM15.14 4.507a1 1 0 011.737 0l11.987 20.999A1 1 0 0127.996 27H4.022a1 1 0 01-.869-1.495L15.141 4.506zm.813 16.483c.843 0 1.527.667 1.527 1.49 0 .822-.684 1.49-1.527 1.49-.843 0-1.527-.668-1.527-1.49 0-.823.684-1.49 1.527-1.49zm1-2.996a1 1 0 01-2 0v-6.997a1 1 0 112 0v6.997z"
                      fill="#DA291D"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </span>
          </div>
          <div
            class="PillToggle--item PillToggle--selected PillToggle--disabledMode"
            data-name="toggle-option-two"
            role="button"
            tabindex="0"
          >
            YAML
          </div>
        </div>
      </div>
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <div
          class="editor"
        >
          <div
            class="StyledProps--font StyledProps--main mainContainer"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-flex-start StyledProps--flex-alignItems-center"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-small-bold StyledProps--color StyledProps--color-red600 StyledProps--margin-right-medium StyledProps--intent-danger"
                style="display: flex; align-items: center;"
              >
                <span
                  class="bp3-icon bp3-icon-warning-sign StyledProps--main Text--icon StyledProps--padding-right-xsmall"
                  icon="warning-sign"
                >
                  <svg
                    data-icon="warning-sign"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      warning-sign
                    </desc>
                    <path
                      d="M15.84 13.5l.01-.01-7-12-.01.01c-.17-.3-.48-.5-.85-.5s-.67.2-.85.5l-.01-.01-7 12 .01.01c-.09.15-.15.31-.15.5 0 .55.45 1 1 1h14c.55 0 1-.45 1-1 0-.19-.06-.35-.15-.5zm-6.85-.51h-2v-2h2v2zm0-3h-2v-5h2v5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                pipeline.inputSetErrorStrip.errorInfo
              </p>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-secondary Button--size Button--small"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  pipeline.outOfSyncErrorStrip.reconcile
                </span>
              </button>
            </div>
          </div>
          <div>
            <span>
              Yaml View
            </span>
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--padding-top-medium"
          >
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                save
              </span>
            </button>
               
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                cancel
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
